--- a/Site/Geral.css
+++ b/Site/Geral.css
@@ -6,33 +6,75 @@ body{
     background-color: #FEF5DD;
 }
 header{
-    a{
-        text-decoration: none;
-        color: #9D9D93;
-    
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    height: 180px;
+    width: 100%;
+    border-bottom: solid rgb(202, 202, 202) 1px;
+    img{
+        width: 300px;;
     }
-    a:hover{
-        color: #48586F;
+    div{
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        padding: 35px 20px;
+        img{
+            width: 30px;
+            padding-left: 5px;
+        }
     }
+}
+
+#jef{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 70px;
+    padding: 20px;
+}
+
+nav{
+    position: sticky;
+    top: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 35px;
+    border-bottom: solid rgb(194, 194, 194) 2px;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px ;
+    background-color: white;
+    font-family: "Cinzel", serif;
     li{
         display: inline-block;
         padding: 5px;
     }
     #estamos{
-        color: #021b3c;
-
+        color: #ac8415;
     }
-    font-family: sans-serif;
-    position: sticky;
-    top: 0px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    li{
+        color: #e7dbb8;
+    }
+    a{
+        color: black;
+        text-decoration: none;
+    }
+    a:hover{
+        color: #cc9b15;
+    }
+}
+
+#donos{
+    position: fixed;
+    bottom: 0px;
     background-color: white;
-    color: #9D9D93;
-    min-height: 50px;
+    border-top: solid rgb(202, 174, 141) 2px ;
     width: 100%;
-    border-bottom: solid rgb(202, 174, 141) 2px;
-    border-bottom-left-radius: 12px;
-    border-bottom-right-radius: 12px;
+    font-size: 16px;
+    font-family: "Edu AU VIC WA NT Hand", cursive;
+    padding: 5px 5px 2px;
 }
