--- a/Site/Geral.css
+++ b/Site/Geral.css
@@ -68,13 +68,66 @@ nav{
     }
 }
 
-#donos{
-    position: fixed;
-    bottom: 0px;
-    background-color: white;
-    border-top: solid rgb(202, 174, 141) 2px ;
-    width: 100%;
-    font-size: 16px;
-    font-family: "Edu AU VIC WA NT Hand", cursive;
-    padding: 5px 5px 2px;
+
+footer{
+    margin: auto;
+    width: 95%;
+    border-top: solid 1px ;
+    box{
+        padding: 15px 0px;
+        display: flex;
+        div{
+            padding-right: 70px;
+            h3, h4{
+                padding-bottom: 10px;
+                font-family: "Cinzel", serif;
+                color: #474843;
+            }
+            p{
+                color: #9D9D93;
+                font-size: 18px;
+                font-family:sans-serif;
+                padding: 7px 0px;
+            }
+            p:hover{
+                color: #031229;
+            }
+        }
+    }
+    #copy{
+        font-size: 15px;
+        padding-top: 15px;
+        text-align: center;
+        border-top: solid 1px ;
+    }
+    blockquote{
+        color: #48586F;
+        font-size: 17px;
+        font-family:sans-serif;
+        padding-bottom: 4px;
+    }
+}
+
+
+
+
+/* Barra de rolagem */
+::-webkit-scrollbar {
+    width: 12px; /* Largura da barra de rolagem */
+}
+
+/* Track da barra de rolagem */
+::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Cor do fundo da barra */
+}
+
+/* Thumb da barra de rolagem */
+::-webkit-scrollbar-thumb {
+    background: #9D9D93; /* Cor do thumb */
+    border-radius: 5px; /* Bordas arredondadas */
+}
+
+/* Thumb da barra de rolagem ao passar o mouse */
+::-webkit-scrollbar-thumb:hover {
+    background: #48586F; /* Cor do thumb ao passar o mouse */
 }
