--- a/Site/Geral.css
+++ b/Site/Geral.css
@@ -6,10 +6,28 @@ body{
     background-color: #ffffff;
 }
 
-h2{
+h1{
+    font-size: xxx-large;
+    font-weight: lighter;
     font-family: "Cinzel", serif;
     color: #474843;
+    display: flex;
+    align-items: center;
+    
 }
+h1::before,
+h1::after {
+    content: '';
+    flex: 1;
+    border-bottom: 1px solid #000;
+}
+h1::before{
+    margin-right: 10px;
+}
+h1::after{
+    margin-left: 10px;
+}
+
 p{
     color: #48586F;
     font-size: 18px;
