--- a/Site/Quinhentismo_autores/Style_autores.css
+++ b/Site/Quinhentismo_autores/Style_autores.css
@@ -18,6 +18,11 @@ body{
     }
     h4{
         display: flex;
+        color: #48586F;
+        font-size: 18px;
+        font-family:sans-serif;
+        font-weight: normal;
+
     }
     h4::before, h4::after{
     content: '';
@@ -35,7 +40,7 @@ conteiner{
     justify-content: space-between;
     margin: 0 25% 0 16%;
     h2{
-        font-size: xx-large;
+        font-size: 27px;
         font-weight: normal;
         margin: 10px 0;
         font-weight: bold;
@@ -66,7 +71,7 @@ conteiner{
     transform: translateX(-100%);
     transition: transform 3s, opacity 3s;
     li{
-        font-size: xx-large;
+        font-size: 28px;
         padding: 50px;
     }
 }
@@ -162,4 +167,38 @@ conteiner{
 }
 
 
+/* A karina que colocou isso*/
+h2{
+    font-family: "Cinzel", serif;
+    color: #474843;
+}
 
+h3, h4{
+    font-family: "Cinzel", serif;
+    color: #474843;
+}
+
+li{
+    color: #48586F;
+    font-size: 18px;
+    font-family:sans-serif
+}
+
+nav{
+    p{
+        font-size: 18px;
+    font-family: "Cinzel", serif;
+    }
+    img{
+        width: 31px;
+        height: 31px;
+        position: absolute;
+        left: 10px;
+        top: 2px;
+    }
+    z-index: 10;
+}
+
+*{
+    z-index: 1;
+}
