--- a/Site/Quinhentismo_contexto_histórico/Style_contesto_hist.css
+++ b/Site/Quinhentismo_contexto_histórico/Style_contesto_hist.css
@@ -4,21 +4,29 @@ h1, h2{
     text-align: center;
     margin: 30px 0px 15px;
 }
-li{
+h2{
+    font-size: 27px;
+}
+p, li{
     color: #48586F;
-    font-size: 18px;
+    font-size: 22px;
     font-family:sans-serif
 }
 nav{
+    p{
+        font-size: 18px;
+    font-family: "Cinzel", serif;
+    }
     img{
         width: 31px;
         height: 31px;
         position: absolute;
         left: 10px;
+        top: 2px;
     }
 }
 body{
-    background-color: blanchedalmond;
+    background-color: #FEF5DD
 }
 
 conteiner img{
@@ -27,7 +35,7 @@ conteiner img{
     width: 400px;
 }
 p, li {
-    margin: 10px 260px;
+    margin: 1.5% 16%;
     text-align: center;
 }
 
