versão com os vídeos

--- a/Site/Quinhentismo_autores/Style_autores.css
+++ b/Site/Quinhentismo_autores/Style_autores.css
@@ -121,6 +121,9 @@ conteiner{
     .obras{
         flex-direction: row-reverse;
     }
+    iframe{
+        margin-right: 50px;
+    }
 }
 
 #nobrega{
