--- a/Site/Geral.css
+++ b/Site/Geral.css
@@ -122,6 +122,7 @@ footer{
                 font-size: 18px;
                 font-family:sans-serif;
                 padding: 7px 0px;
+                cursor: pointer;
             }
             p:hover{
                 color: #031229;
