--- a/Site/Geral.css
+++ b/Site/Geral.css
@@ -2,6 +2,9 @@
     padding: 0px;
     margin: 0px;
 }
+a{
+    text-decoration: none;
+}
 body{
     background-color: #ffffff;
 }
@@ -103,7 +106,6 @@ nav{
 
 
 footer{
-    background-color: white;
     margin: auto;
     width: 95%;
     border-top: solid 1px ;
@@ -140,6 +142,43 @@ footer{
         font-size: 17px;
         font-family:sans-serif;
         padding-bottom: 4px;
+    }
+}
+
+barfloor{
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    height: 30px;
+    #barra{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        .bloco{
+            padding: 10px;
+            border: 1px solid #474843;
+            height: 20px;
+            width: 20px;
+            color: black;
+            font-size: larger;
+            background-color: antiquewhite;
+        }
+        num{
+            cursor: pointer;
+            padding: 10px;
+            border: 1px solid #474843;
+            height: 25px;
+            width: 25px;
+            color: black;
+            font-size: larger;
+            background-color: rgb(249, 223, 189);
+        }
+        a:hover{
+            height: 25px;
+            width: 25px;
+            background-color: rgb(249, 223, 189);
+        }
     }
 }
 
