--- a/Site/Quinhentismo/Style_principal.css
+++ b/Site/Quinhentismo/Style_principal.css
@@ -66,7 +66,7 @@ nav{
 #pg2{  
     display: flex;
     text-align: center;
-    margin: 50px;
+    margin: 50px 50px 20px 50px;
     align-items: center;
     flex-direction: column;
     margin-right:  18%;
