--- a/Site/Quinhentismo/Style_principal.css
+++ b/Site/Quinhentismo/Style_principal.css
@@ -21,7 +21,7 @@ nav{
 }
 
 #pg1{
-    #title{
+    .title{
         margin: 40px 0;
     }
     p{
@@ -57,10 +57,10 @@ nav{
     }
 }
 
-#title{
+.title{
     margin-top: 70px;
 }
-#title::before{
+.title::before{
     flex: 7;
 }
 #pg2{  
@@ -123,3 +123,28 @@ iframe{
     display: block;
     margin: auto;
 }
+
+/* Parte da transição */
+.title, .transicao{
+    opacity: 0;
+    transition: opacity 2s;
+}
+.title{
+    transform: translateY(-10%);
+}
+.transicao{
+    transform: translateX(-50%);
+}
+
+.title.visible{
+    opacity: 1;
+    transform: translateY(0);
+    transition: opacity 2s, transform 2s;
+}
+.transicao.visible{
+    opacity: 1;
+    transform: translateY(0);
+    transition: opacity 5s, transform 5s;
+}
+
+
