mudei os textos dos times na página 'sobre nós', mudei a página de css principal para concertar o z-index das transições, corrigi alguns dos títulos das páginas, e começei a estilização da página das referencias

--- a/Site/Geral.css
+++ b/Site/Geral.css
@@ -204,3 +204,13 @@ barfloor{
 ::-webkit-scrollbar-thumb:hover {
     background: #48586F; /* Cor do thumb ao passar o mouse */
 }
+
+/*Karina que colocou isso*/
+
+*{
+    z-index: 1;
+}
+
+nav{
+    z-index: 10;
+}
