--- a/Site/Referências/Style_fontes.css
+++ b/Site/Referências/Style_fontes.css
@@ -34,9 +34,20 @@ a{
     font-family: "Cinzel", serif; ;
     color: #474843;  
 }
+h1{
+    margin-bottom: 15px;
+}
 
 a:hover{
     height: 25px;
     width: 25px;
     color: rgb(146, 177, 255);
+}
+
+
+.title-refs{
+    margin-bottom: 25px;
+    font-family: "Cinzel", serif;
+    font-size: 25px;
+    color: #272725;
 }
